Updated CSS file (Upper Case)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>ESL Lesson Plans</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css"
+		<link rel="stylesheet" type="text/css" href="CSS/style.css"
 	</head>
 		<body>
 			<h1>ESL Lesson Plans</h1>
