--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -2,11 +2,17 @@
 <html>
 <head>
 	<title>Eco-Friendly ESL Lessons</title>
+
+  <link href='http://fonts.googleapis.com/css?family=Alegreya:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	
 </head>
 <body id="highlighted">
     <h1 id="first">Eco-Friendly ESL Lessons</h1>
-      <img src="../unit_3/images/logo.jpg" alt="logo of Eco-friendly ESL lessons" title="Eco-friendly ESL lessons">
+      <img src="../unit_4/images/logo.jpg" alt="logo of Eco-friendly ESL lessons" title="Eco-friendly ESL lessons">
       <p id="slogan">Create Environmentally Friendly Lessons</p>
 
       <p id="second"><strong>Eco-friendly ESL lessons helps you create lessons that are environmentally friendly. Learners avoid carrying around an overload of unreviewed papers and educators reduce the amount of paper they use on a daily basis.</strong></p>
@@ -19,7 +25,7 @@
           <li>Find ways to reduce daily paper usage in class</li>
       </ul>
 
-      <p>For more information regarding complete eco-friendly ESL lessons, please contact:</p>
+      <p id="third"><strong>For more information regarding complete eco-friendly ESL lessons, please contact:</strong></p>
 
       <p> Eco-friendly ESL Lessons<br>
       444-444-4444<br>
