--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -17,17 +17,17 @@
 
       <p id="second"><strong>Eco-friendly ESL lessons helps you create lessons that are environmentally friendly. Learners avoid carrying around an overload of unreviewed papers and educators reduce the amount of paper they use on a daily basis.</strong></p>
 
-      <ul>
-          <li>Read complete lesson plans online</li>
-          <li>Browse through over fifty integrated skills lessons</li>
-          <li>Integrate technology without wasting paper</li>
-          <li>Learn how to use contemporary apps in the classroom</li>
-          <li>Find ways to reduce daily paper usage in class</li>
+      <ul id="list">
+          <li><strong>Read complete lesson plans online</strong></li>
+          <li><strong>Browse through over fifty integrated skills lessons</strong></li>
+          <li><strong>Integrate technology without wasting paper</srong></li>
+          <li><strong>Learn how to use contemporary apps in the classroom</strong></li>
+          <li><strong>Find ways to reduce daily paper usage in class</strong></li>
       </ul>
 
-      <p id="third"><strong>For more information regarding complete eco-friendly ESL lessons, please contact:</strong></p>
+      <p class="third"><strong>For more information regarding complete eco-friendly ESL lessons, please contact:</strong></p>
 
-      <p> Eco-friendly ESL Lessons<br>
+      <p class="third"> Eco-friendly ESL Lessons<br>
       444-444-4444<br>
       <a href="http://www.ecofriendlyesl.com">www.ecofriendlyesl.com</a></p>
 
