--- a/unit_6/blog.html
+++ b/unit_6/blog.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
+
+<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+ 
+ <title>Zoe's Blog</title>
+
 </head>
+
 <body>
 
 <h2>The Photobooth</h2>
